--- a/multi-interface-component/pom.xml
+++ b/multi-interface-component/pom.xml
@@ -15,8 +15,13 @@
         <dependency>
       		<groupId>org.apache.felix</groupId>
       		<artifactId>org.apache.felix.framework</artifactId>
-      		<version>4.0.2</version>
+      		<version>4.2.1</version>
     	</dependency>
+    	<dependency>
+		    <groupId>org.apache.felix</groupId>
+		    <artifactId>org.apache.felix.scr.annotations</artifactId>
+		    <version>1.9.4</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
