--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lemekk.examples</groupId>
-  <artifactId>felix</artifactId>
-  <packaging>pom</packaging>
-  <name>Apache Felix examples</name>
+	<groupId>com.lemekk.examples</groupId>
+	<artifactId>felix</artifactId>
+	<packaging>pom</packaging>
+	<name>Apache Felix examples</name>
 
-  <version>1.0.0-SNAPSHOT</version>
-  <description>Lemekk's Apache Felix examples</description>
-  
-  <developers>
-    <developer>
-      <id>lemekk</id>
-      <name>Przemek Lewicki</name>
-      <email>lemekk@gmail.com</email>
-    </developer>
-  </developers>
+	<version>1.0.0-SNAPSHOT</version>
+	<description>Lemekk's Apache Felix examples</description>
+	
+	<developers>
+		<developer>
+			<id>lemekk</id>
+			<name>Przemek Lewicki</name>
+			<email>lemekk@gmail.com</email>
+		</developer>
+	</developers>
 
-  <modules>
-    <module>multi-interface-component</module>
-  </modules>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<fork>true</fork>
+					<source>1.6</source>
+					<target>1.6</target>
+					<compilerVersion>1.6</compilerVersion>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<modules>
+		<module>multi-interface-component</module>
+	</modules>
 </project>
